@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: guile-dbi
+Description: An SQL database interface for Guile
+Version: @VERSION@
+Libs: -L${libdir} -lguile-dbi
+Cflags: -I${includedir}
+
+
